# weex

./: .gitignore  README.md  app.py  gpt.py  main.py  requirements.txt  test.txt  tools.py  weex.py
static/: style.css
templates/: index.html
tradecoin/: README.md  pyproject.toml
tradecoin/src/tradecoin/: crew.py  main.py
