[project]
name = "tradecoin"
version = "0.1.0"
description = "tradecoin using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
tradecoin = "tradecoin.main:run"
run_crew = "tradecoin.main:run"
train = "tradecoin.main:train"
replay = "tradecoin.main:replay"
test = "tradecoin.main:test"
run_with_trigger = "tradecoin.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
